/*
 * CDMlib - Cartesian Data Management library
 *
 * Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2014-10-26
Minor corrections about coordinatefile information
座標ファイルに関する情報の変数名やコメント文の訂正を行った。

------------------
2014-10-25
Change CoordinateFileFormat to CoordinateFileType
変数CoordinateFileFormatをCoordinateFileTypeに変更した。

------------------
2014-10-25
Merge branch advance_develop_NonUniform into branch advance_develop
ブランチadvance_develop_NonUniformをブランチadvance_developにマージした。
その際、cdm_DFI.h,cdm_DFI.Cは競合が発生したので解決した。
また、
E_CDM_OUTPUT_TYPE-> E_CDM_FILE_TYPE
CompName -> VariName
に変更できていない部分があったので変更した。

------------------
2014-10-24
- plot3d check
- #define D_CDM_EXT_FUNC "func" >> "fun" // 拡張子は"fun", FileFormat識別子は"plot3d"

------------------
2014-10-22
Add check of number of variables for SPH format
SPH形式のファイルを入出力する際、変数の個数が１か３以外の場合に
エラーとなるように設定した。

------------------
2014-10-22
Replace Component with NumVariables and edit codes following this replacement
dfiファイルのFileInfoの項目ComponentをNumVariablesに変更した。
また、この変更に伴い、コード内のComponentに関する単語について
Component->NumVariables、nComp->nVari等の置換を行った。
(ただし、BOVのヘッダー部のDATA_COMPONENTはそのままにした。)
また、コード内のコメントで「成分」を含んだ言葉を「変数」で置き換えた。

------------------
2014-10-22
Delete ArrayShape from dfi file and set ArrayShape by file format
dfiファイルのFileInfoの項目からArrayShapeを削除し、
ArrayShapeはファイル形式によって定めるようにした。

------------------
2014-10-21
Restore VectorMinMax only for SPH format
SPH形式のみ、VectorMinMaxを入出力できるように戻した。

------------------
2014-10-21
Delete VectorMinMax and add check of number of variable names
VectorMinMaxをdfiファイルから削除した。
また、フィールドデータの変数の個数と登録された変数名の個数が
一致するか確認するようにした。

------------------
2014-10-20
Set filetype in Plot3d format Fbinary
Plot3d形式のファイル入出力のタイプをFbinaryに設定した。

------------------
2014-10-20
Modify method WriteInit in class cdm_DFI and Read in class cdm_FileInfo
 to return error when arrayshape in plot3d is nijk