@@ -11,6 +11,16 @@ REVISION HISTORY
 ================
 
 ------------------
+2014-10-30
+Apply function overloading to method WriteInit and edit class cdm_NonUniformDomain
+API関数WriteInitにオーバーロード機能の適用し、等間隔格子用と不等間隔格子用の
+API関数WriteInitを用意した。また、等間隔格子・不等間隔格子の共通処理を
+行う部分は、さらにオーバーロード機能を適用したWriteInitを作成した。
+この変更に伴い、クラスcdm_NonUniformDomainのコンストラクタ部を編集した。
+不等間隔格子の場合の座標データの精度は、クラスcdm_NonUniformDomainの
+テンプレートの型で指定するようにした。
+
+------------------
 2014-10-26
 Minor corrections about coordinatefile information
 座標ファイルに関する情報の変数名やコメント文の訂正を行った。
